<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuDecideFragment"
        android:title="Home"
        android:icon="@drawable/ic_home_black_24dp"
        />
    <item
        android:id="@+id/menuListFragment"
        android:title="List"
        android:icon="@drawable/ic_dashboard_black_24dp"
        />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="Profile" />
</menu>